# BARAM-2023-second-semester-project

./: README.md
lidar_cluster/: package.xml  setup.py
lidar_cluster/launch/: beagle.launch.py  lidar_cluster.launch.py  single_beagle.launch.py
lidar_cluster/lidar_cluster/: beagle0_core.py  beagle0_moved_path.py  beagle1_core.py  beagle1_moved_path.py  goal_update.py  lidar_cluster.py  subscribe_map0.py  subscribe_map1.py
turtlebot3_cartographer/config/: turtlebot3_lds_2d.lua
turtlebot3_cartographer/launch/: cartographer.launch.py
turtlebot3_gazebo/launch/: launch_sim.launch.py  multi_robot.launch.py  rsp.launch.py
turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_gazebo/models/turtlebot3_burger_1/: model.sdf
turtlebot3_gazebo/urdf/: gazebo_control.xacro  lidar.xacro  robot_core.xacro  turtlebot3_burger_1.urdf
turtlebot3_gazebo/worlds/: empty_world.world
turtlebot3_navigation2/launch/: multi_localization.launch.py  nav2_custom.launch.py  navigation2(not_using).launch.py
turtlebot3_navigation2/map/: map.pgm  map.yaml  map1.pgm  map1.yaml  map_real.pgm  map_real.yaml
turtlebot3_navigation2/param/: burger_1_amcl_config.yaml  burger_1_behavior.yaml  burger_1_bt_navigator.yaml  burger_1_controller.yaml  burger_1_planner_server.yaml  burger_amcl_config.yaml  burger_behavior.yaml  burger_bt_navigator.yaml  burger_controller.yaml  burger_planner_server.yaml
turtlebot3_navigation2/param/behavior/: behavior_follower.xml
turtlebot3_navigation2/rviz/: burger_1_navigation2.rviz  burger_navigation2.rviz
(+1 files in other folders)
